--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -53,10 +53,6 @@
     --radius-md: 16px;
     --radius-sm: 8px;
 
-    --white: rgb(255, 255, 255);
-    --white-a60: rgba(255, 255, 255, 0.7);
-    --white-a92: rgba(255, 255, 255, 0.92);
-
     /* Breakpoints screens */
     --screen-mobile: 320px;
     --screen-desktop-sm: 1024px;
@@ -65,6 +61,10 @@
 
 /* semantic color variables for this project */
 :root {
+    --white: rgb(255, 255, 255);
+    --white-a60: rgba(255, 255, 255, 0.7);
+    --white-a92: rgba(255, 255, 255, 0.92);
+
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
     --color-background-mute: var(--vt-c-white-mute);
@@ -73,7 +73,10 @@
     --color-border-hover: var(--vt-c-divider-light-1);
 
     --color-heading: var(--vt-c-text-light-1);
-    --color-text: var(--vt-c-text-light-1);
+
+    --color-text: var(--vt-c-text-dark-2);
+    --color-primary-text: hsl(160, 87%, 47%);
+    --color-highlight: hsl(41, 100%, 61%);
 
     --section-gap: 160px;
 }
@@ -92,6 +95,49 @@
     }
 }
 
+.button {
+    padding: 0.5em;
+    color: var(--color-primary-text);
+    border-color: var(--color-primary-text);
+    cursor: pointer;
+    background-color: transparent;
+
+    &:hover {
+        border-color: hsl(41, 100%, 61%);
+        color: hsl(41, 100%, 61%)
+    }
+}
+
+.typewriter {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .05em solid #fafafa; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    /*margin: 0 auto; !* Gives that scrolling effect as the typing happens *!*/
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent
+    }
+    50% {
+        border-color: #fafafa;
+    }
+}
+
 *,
 *::before,
 *::after {
@@ -103,9 +149,9 @@
 body {
     min-height: 100vh;
     color: var(--color-text);
-    background: radial-gradient(circle, rgba(70,70,71,1) 0%, rgba(47,47,48,1) 55%, rgb(10, 10, 10) 100%);
+    background: radial-gradient(circle, rgb(56, 56, 56) 0%, rgba(47, 47, 48, 1) 55%, rgb(10, 10, 10) 100%);
 
-    font-size: 15px;
+    font-size: 24px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -115,16 +161,79 @@ body {
     display: flex;
 }
 
-.responsive-img {
-    width: 100%;
-    height: auto;
-}
+.page {
+    display: block;
+    max-width: 900px;
+    margin: auto;
+    align-items: center;
+    padding-top: 3em;
 
-/* Mobile */
-@media (max-width: 780px) {
-    body {
-        background: rgba(47,47,48,1);
-
+    .page-item {
+        margin-bottom: 2em;
     }
 }
 
+/* Mobile */
+@media (max-width: 1024px) {
+    body {
+        background: rgba(47, 47, 48, 1);
+        font-size: 20px;
+    }
+
+    .page {
+        display: block;
+        max-width: 90%;
+    }
+
+    .typewriter {
+        overflow: visible !important;
+        border-right: none !important;
+        white-space: normal;
+        animation:none !important;
+        blink-caret: none;
+    }
+}
+
+/* override styles when printing */
+@media print {
+    body {
+        margin: 0;
+        color: #000;
+        background-color: #fff;
+        font-size: 18px;
+    }
+
+    header {
+        display: none;
+    }
+
+    footer {
+        display: none;
+    }
+
+    .no-print {
+        display: none !important;
+    }
+
+    .page {
+        padding-top: 0.5em;
+
+        .page-item {
+            margin-bottom: 1em;
+        }
+    }
+
+    .item, p {
+        break-inside: avoid;
+    }
+
+    .typewriter {
+        overflow: visible;
+        border-right: none;
+        white-space: normal;
+    }
+
+    :root {
+        --color-primary-text: hsl(228, 48%, 6%);
+    }
+}
