--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,47 +2,36 @@
 
 a, .green {
     text-decoration: none;
-    color: hsla(160, 100%, 37%, 1);
+    color: var(--color-primary-text);
     transition: 0.4s;
 }
 
 @media (hover: hover) {
     a:hover {
-        background-color: hsla(160, 100%, 37%, 0.2);
-        color: hsl(41, 100%, 61%)
+        color: var(--color-highlight);
     }
-}
-
-.typewriter {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .05em solid #fafafa; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    /*margin: 0 auto; !* Gives that scrolling effect as the typing happens *!*/
-    letter-spacing: .15em; /* Adjust as needed */
-    animation: typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
 }
 
 .exact-active-link {
-    color: hsl(41, 100%, 61%)
+    color: var(--color-highlight);
 }
 
-/* The typing effect */
-@keyframes typing {
-    from {
-        width: 0
-    }
-    to {
-        width: 100%
-    }
+.paragraph-title {
+    border-bottom: 1px solid var(--color-primary-text);
 }
 
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-    from, to {
-        border-color: transparent
-    }
-    50% {
-        border-color: #fafafa;
+.paragraph-content {
+    margin-top: 0.5em;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+/* override styles when printing */
+@media print {
+    .paragraph-title {
+        border-bottom: 1px solid var(--color-primary-text);
+        font-size: 28px;
     }
 }
