refactor: improved font style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,6 +18,7 @@ a, .green {
 
 .paragraph-title {
     border-bottom: 1px solid var(--color-primary-text);
+    font-variant: small-caps;
 }
 
 .paragraph-content {
