--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -149,7 +149,7 @@
 body {
     min-height: 100vh;
     color: var(--color-text);
-    background: radial-gradient(circle, rgb(56, 56, 56) 0%, rgba(47, 47, 48, 1) 55%, rgb(10, 10, 10) 100%);
+    background: radial-gradient(circle, rgb(42, 41, 41) 0%, rgb(41, 41, 42) 55%, rgb(10, 10, 10) 100%);
 
     font-size: 24px;
     text-rendering: optimizeLegibility;
